Modifique mi html

--- a/prueba.html
+++ b/prueba.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Github Page</title>
 </head>
 <body>
-    <h3>Probando poner mas cosas al mismo repositorio</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestias aliquid, ipsum quaerat similique quo, asperiores officiis dolor nesciunt corrupti natus porro voluptates deleniti aut aliquam. Distinctio tenetur vitae quidem!</p>
+    <h1>Mi página funcionando con Github Page</h1>
 </body>
 </html>
